# openAUTOSAR

./: .gitignore  CMakeLists.txt  cifuzz.yaml
communication/CAN/CanIf/: CMakeLists.txt
communication/CAN/CanIf/include/: CanIf_Cfg.h
communication/CAN/CanIf/test/: fuzztest.cpp  stubs.c  testgen_template.xlsx
communication/CAN/CanIf/test/cifuzz/: fuzztest.cpp  mocklib.cpp  stubs.c  testgen_template_filled.xlsx
include/: Can.h
system/Crc/: CMakeLists.txt
system/Crc/test/cifuzz/: fuzz_crc.cpp
